--- a/Bio/bio0.html
+++ b/Bio/bio0.html
@@ -6,16 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
     <title>A Brief Bio</title>
 
-    <style>
-        p{
-            color:white;
-            background-color: black;
-
-        }
-    </style>
+   
 </head>
 <body>
-    <h1 class="tester">Olanrewaju Toheeb</h1>
+    <h1 id="Header" class="Header">Olanrewaju Toheeb</h1>
     <div title="job-title">Web Developer</div>
     <p class="tester">
         A little boy turn to man from Nigeria. Inspire to be a developer by the unknown
@@ -53,7 +47,6 @@
                 <li class="tel">Tel: 09138495712</li>
             </ul>
         </nav>
-        <h3>This is just for testing</h3>
     </footer>
 </body>
 </html>
